Fix bug where loading spinner z-index wrong

--- a/src/components/common/LoadingSpinner/loadingspinner.module.scss
+++ b/src/components/common/LoadingSpinner/loadingspinner.module.scss
@@ -30,7 +30,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        z-index: 2;
+        z-index: 3;
         display: grid;
         pointer-events: none;
         .spinnerImageAndText {
@@ -68,4 +68,8 @@
         transition: opacity 0.5s ease;
         opacity: 1;
     }
+}
+
+.children:not(.displayed) {
+    display: none;
 }
